--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Tilt+Neon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Quicksand&family=Tilt+Neon&display=swap" rel="stylesheet">
     <style>
       * {
-        font-family: 'Tilt Neon', sans-serif;
+        font-family: 'Poppins', sans-serif;
       }
     </style>
     <title><%= htmlWebpackPlugin.options.title %></title>
