--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Quicksand&family=Tilt+Neon&display=swap" rel="stylesheet">
     <style>
       * {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Quicksand', sans-serif;
       }
     </style>
     <title><%= htmlWebpackPlugin.options.title %></title>
