--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Save money on groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
   <meta name="keywords" content="Supersavers, groceries, deals, Woolies, Coles, IGA, save money, discounts">
-  <link rel="icon" href="<%= BASE_URL %>supersaver.png" type="image/png">
+  <link rel="icon" href="supersaver.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
