--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Save money on groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
   <meta name="keywords" content="Supersavers, groceries, deals, Woolies, Coles, IGA, save money, discounts">
-  <link rel="icon" href="supersaver.png" type="image/png">
+  <link rel="icon" href="favicon.ico" type="image/ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Quicksand&family=Tilt+Neon&display=swap" rel="stylesheet">
+  <!-- Open Graph (OG) meta tags -->
+  <meta property="og:title" content="SuperSavers | Save Heaps">
+  <meta property="og:description" content="Save money on groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
+  <meta property="og:image" content="https://supersavers.au/favicon.ico">
+  <meta property="og:url" content="https://supersavers.au">
+  <meta property="og:type" content="website">
+  
+    <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="SuperSavers | Save Heaps">
+  <meta name="twitter:description" content="Save money on groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
+  <meta name="twitter:image" content="https://supersavers.au/favicon.ico">
+  
   <style>
     * {
       font-family: 'Quicksand', sans-serif;
