--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Save money on groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
-  <meta name="keywords" content="Supersavers, groceries, deals, Woolies, Coles, IGA, save money, discounts">
+  <meta name="description" content="Save Heaps with Supersavers. Discover unbeatable deals on groceries with Supersavers and explore discounts at Woolies, Coles, IGA, and more. Save big on your grocery bills. Join Supersavers to start maximizing your savings today.">
+  <meta name="keywords" content="Supersavers, grocery deals, supermarket discounts, Woolies specials, Coles offers, IGA promotions, save money on groceries, budget-friendly shopping, exclusive offers, money-saving tips, best grocery prices, discount shopping, frugal living, grocery coupons, smart shopping, bargains, shopping hacks, grocery rewards, special discounts, food savings, unbeatable deals, australia, woolworths"> 
+  <link rel="icon" href="favicon.ico" type="image/ico">
   <link rel="icon" href="favicon.ico" type="image/ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,26 +13,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Quicksand&family=Tilt+Neon&display=swap" rel="stylesheet">
   <!-- Open Graph (OG) meta tags -->
   <meta property="og:title" content="SuperSavers | Save Heaps">
-  <meta property="og:description" content="Save money on groceries with supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
+  <meta property="og:description" content="Save Heaps on Groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
   <meta property="og:image" content="https://supersavers.au/banner.png">
   <meta property="og:url" content="https://supersavers.au">
   <meta property="og:type" content="website">
-  
     <!-- Twitter Card meta tags -->
   <meta name="twitter:card" content="Save Heaps with Supersavers">
   <meta name="twitter:title" content="SuperSavers | Save Heaps">
-  <meta name="twitter:description" content="Save money on groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
+  <meta name="twitter:description" content="Save Heaps on Groceries with Supersavers. Find the best deals at Woolies, Coles, IGA, and more. Save on your grocery bills with our money-saving tips.">
   <meta name="twitter:image" content="https://supersavers.au/banner.png">
-  
   <style>
     * {
       font-family: 'Quicksand', sans-serif;
     }
   </style>
-  <title>Supersavers | Save Heaps on Groceries</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+  <title>Super Savers | Save Heaps on Groceries</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 <body>
